--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,6 +6,10 @@
 
 .about__avatar {
   max-width: 464px;
+  flex-shrink: 4;
+}
+
+.about__avatar-img {
   width: 100%;
 }
 
@@ -13,6 +17,7 @@
   margin-left: 54px;
   margin-top: 51px;
   max-width: 600px;
+  flex-shrink: 5;
 }
 
 .about__title {
@@ -24,4 +29,39 @@
 
 .about__text-block {
   margin-bottom: 24px;
+  line-height: 24px;
+}
+
+@media screen and (max-width: 992px) {
+  .about {
+    margin-top: 40px;
+    margin-bottom: 60px;
+  }
+
+  .about__content {
+    margin-top: 0;
+  }
+
+  .about__content {
+    margin-top: 0;
+  }
+
+  .about__title {
+    margin-top: 0;
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .about {
+    flex-direction: column;
+  }
+
+  .about__avatar {
+    margin-bottom: 30px;
+  }
+
+  .about__content {
+    margin-left: 0;
+  }
 }
