--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,150 +1,185 @@
 .navigation {
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid #c4c4c4;
+  color: #ffffff;
+}
+
+.navigation_dark {
+  border-color: #d1d2d6;
+  color: #1a1b22;
+}
+
+.navigation_mobile-open {
+  background-color: #1a1b22;
+}
+
+.navigation_dark.navigation__mobile-open {
+  background-color: transparent;
+}
+
+.navigation__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fff;
-  height: 80px;
-}
-
-.navigation_font-dark {
-  color: inherit;
-}
-
-.navigation_background-light {
-  background-color: white;
+  height: 100%;
 }
 
 .navigation__logo {
   font-size: 20px;
   font-family: 'Roboto Slab';
   font-weight: 700;
-  line-height: 24px;
   text-decoration: none;
-  color: inherit;
+  color: currentColor;
 }
 
 .navigation__menu {
   display: flex;
+  justify-content: space-between;
+  height: 100%;
   align-items: center;
 }
 
 .navigation__links {
-  list-style-type: none;
   display: flex;
+  list-style-type: none;
+  align-items: center;
+  margin: 0;
+  height: 100%;
 }
 
 .navigation__link {
-  margin-right: 34px;
   text-decoration: none;
-  color: inherit;
+  color: currentColor;
+  font-family: 'Roboto';
+  margin-right: 34px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1px;
+  box-sizing: border-box;
+  border-bottom: 3px solid transparent;
 }
 
 .navigation__link_active {
   border-bottom: 3px solid currentColor;
-  padding-bottom: 27px;
 }
 
-.navigation__auth-button {
-  border-radius: 100px;
+.navigation__auth {
   background-color: transparent;
-  border: 1px solid #d1d2d6;
-  padding: 0 20px;
-  font-weight: 500;
   height: 48px;
-  color: inherit;
+  border: 1px solid currentColor;
+  border-radius: 100px;
+  padding: 12px 19px;
+  box-sizing: border-box;
+  color: currentColor;
   cursor: pointer;
 }
 
-.navigation__auth-button_dark {
-  border-color: #1a1b22;
-  color: #1a1b22;
-}
-
-.navigation__auth-button_logged-in {
-  color: inherit;
-  padding-right: 40px;
-  background-repeat: no-repeat;
-  background-position: right 10px center;
+.navigation__auth_logged-in {
+  padding-right: 37px;
   background-image: url('../../images/logout_icon_light.svg');
+  background-repeat: no-repeat;
+  background-position: center right 10px;
 }
 
-.navigation__auth-button_dark.navigation__auth-button_logged-in {
+.navigation_dark .navigation__auth_logged-in {
   background-image: url('../../images/logout_icon_dark.svg');
 }
 
-.navigation-wrapper__line {
-  width: 100%;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #c4c4c4;
-}
-
-.navigation__mobile-toggle {
-  width: 24px;
-  height: 24px;
-  background-image: url('../../images/hamburger.svg');
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.navigation__mobile-toggle_close {
-  background-image: url('../../images/close.svg');
-}
-
-.navigation__mobile-toggle_dark {
-  background-image: url('../../images/hamburger_dark.svg');
-}
-
-.navigation__mobile-toggle_close.navigation__mobile-toggle_dark {
-  background-image: url('../../images/close_dark.svg');
-}
-
-.navigation__mobile-toggle {
+.navigation__mobile-menu-toggle {
   display: none;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1220px) {
+  .navigation {
+    height: 66px;
+  }
+
+  .navigation__link {
+    font-size: 16px;
+    margin-right: 16px;
+  }
+
+  .navigation__auth {
+    font-size: 16px;
+    padding: 8px 15px;
+  }
+
+  .navigation__auth_logged-in {
+    padding-right: 29px;
+    background-position: center right 5px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .navigation {
     height: 56px;
+  }
+
+  .navigation_dark {
+    background-color: #ffffff;
   }
 
   .navigation__logo {
     font-size: 16px;
   }
 
-  .navigation_background-dark {
-    background-color: #1a1b22;
-  }
-
   .navigation__menu {
-    display: none;
     position: absolute;
     top: 57px;
     left: 0;
-    flex-direction: column;
-    background-color: #ffffff;
     width: 100%;
-    padding: 16px;
+    background-color: #1a1b22;
+    flex-direction: column;
+    height: 230px;
+    border-radius: 0 0 16px 16px;
     align-items: flex-start;
+    padding: 30px 16px;
     box-sizing: border-box;
+    display: none;
   }
 
-  .navigation__menu_dark {
-    background-color: #1a1b22;
+  .navigation_dark .navigation__menu {
+    background-color: #ffffff;
+    border-bottom: 1px solid #d1d2d6;
+  }
+
+  .navigation__menu_mobile-open {
+    display: flex;
+  }
+
+  .navigation__mobile-menu-toggle {
+    width: 16px;
+    height: 16px;
+    background-image: url('../../images/hamburger.svg');
+    background-position: center;
+    cursor: pointer;
+    display: block;
+  }
+
+  .navigation__mobile-menu-toggle_close {
+    background-image: url('../../images/close.svg');
+  }
+
+  .navigation_dark .navigation__mobile-menu-toggle {
+    background-image: url('../../images/hamburger_dark.svg');
+  }
+
+  .navigation_dark .navigation__mobile-menu-toggle_close {
+    background-image: url('../../images/close_dark.svg');
   }
 
   .navigation__links {
     flex-direction: column;
+    align-items: flex-start;
     padding: 0;
-    margin: 20px 0 0 0;
+    height: initial;
   }
 
   .navigation__link {
-    margin-bottom: 20px;
-  }
-
-  .navigation__link-item {
+    height: initial;
+    font-size: 18px;
     margin-bottom: 30px;
   }
 
@@ -152,15 +187,9 @@
     border: none;
   }
 
-  .navigation__auth-button {
+  .navigation__auth {
     width: 100%;
-  }
-
-  .navigation__mobile-toggle {
-    display: block;
-  }
-
-  .navigation__menu_mobile-show {
-    display: flex;
+    height: 56px;
+    font-size: 18px;
   }
 }
