--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,6 +1,18 @@
 .news-card-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin-bottom: 64px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 16px;
+  justify-items: stretch;
+}
+
+@media screen and (max-width: 767px) {
+  .news-card-list {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .news-card-list {
+    grid-template-columns: auto;
+  }
 }
