--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,23 +1,50 @@
 .news-card {
-  max-width: 400px;
   width: 100%;
   border-radius: 15px;
   overflow: hidden;
-  text-decoration: none;
   color: #1a1b22;
+  cursor: pointer;
+}
+
+.news-card__image-container {
+  position: relative;
+  height: 272px;
 }
 
 .news-card__image {
-  height: 272px;
-  background-size: cover;
-  padding: 24px;
-  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .news-card__button-wrapper {
+  position: absolute;
+  top: 24px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
+  padding: 0 24px;
+  box-sizing: border-box;
+}
+
+.news-card__tag {
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 10px;
+  font-size: 14px;
+  padding: 8px 12px;
+  display: flex;
+  visibility: hidden;
+}
+
+.news-card__tag_show {
+  visibility: visible;
+}
+
+.news-card__tag_active {
+  visibility: visible;
 }
 
 .news-card__image-actions {
@@ -40,8 +67,20 @@
   background-image: url('../../images/bookmark.svg');
 }
 
-.news-card__button_type_bookmark:hover {
+.news-card__button_type_bookmark.news-card__button_checked {
+  background-image: url('../../images/bookmark_checked.svg');
+}
+
+.news-card__button_type_bookmark:not(.news-card__button_checked):hover {
   background-image: url('../../images/bookmark_hover.svg');
+}
+
+.news-card__button_type_trash {
+  background-image: url('../../images/trash.svg');
+}
+
+.news-card__button_type_trash:hover {
+  background-image: url('../../images/trash_hover.svg');
 }
 
 .news-card__button-tooltip {
@@ -85,6 +124,9 @@
   font-size: 26px;
   margin-bottom: 16px;
   line-height: 30px;
+  max-height: 90px;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 .news-card__text {
@@ -93,13 +135,46 @@
   height: 88px;
   width: 100%;
   line-height: 22px;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 .news-card__source {
   color: #b6bcbf;
   font-family: 'Roboto Slab';
   text-decoration: none;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1200px) {
+  .news-card__button-tooltip {
+    display: none;
+  }
+
+  .news-card__info {
+    height: 280px;
+  }
+
+  .news-card__title {
+    font-size: 22px;
+    line-height: 24px;
+    max-height: 75px;
+  }
+
+  .news-card__source {
+    font-size: 16px;
+  }
+
+  .news-card__button-wrapper {
+    top: 8px;
+    padding: 0 8px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .news-card__button-wrapper {
+    top: 16px;
+    padding: 0 16px;
+  }
 }
